# montreal-livability

./: README.md
dagster-quickstart/: .gitignore  pyproject.toml
dagster-quickstart/src/dagster_quickstart/defs/: assets.py  resources.py
dagster-workspace/: .env.example  .gitignore  dg.toml
dagster-workspace/deployments/aws/: MIGRATION.md  README.md  app.py  cdk.context.json  cdk.json  pyproject.toml  run.py  run_now.py
dagster-workspace/deployments/local/: pyproject.toml
dagster-workspace/projects/montreal/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
dagster-workspace/projects/montreal/src/montreal/: ISSUES.md  __init__.py  batch.py  definitions.py
dagster-workspace/projects/montreal/src/montreal/defs/: automation.py  checks.py  quality.py
dagster-workspace/projects/montreal/src/montreal/defs/assets/: _cache.py  analytics.py  distance.py  distance_layer.py  h3.py  h3_layer.py  jobs.py  raw.py  report.py
dagster-workspace/projects/montreal/src/montreal/defs/assets/bronze/: __init__.py  _config.py  addresses.py  bike_paths.py  config.py  municipality_boundaries.py  parks.py  pois.py  raw.py  transit_stops.py
dagster-workspace/projects/montreal/src/montreal/defs/assets/gold/: _config.py  analytics.py  config.py  livability_map.py  livability_score.py  report.py
dagster-workspace/projects/montreal/src/montreal/defs/assets/gold/templates/: map.html  report.css  report.html
dagster-workspace/projects/montreal/src/montreal/defs/assets/silver/: _config.py  amenities.py  config.py  distance.py  distances.py  h3.py  municipalities.py
dagster-workspace/projects/montreal/src/montreal/defs/assets/silver/h3/: __init__.py  addresses.py  bike_paths.py  osm_pois.py  parks.py  transit_stops.py
dagster-workspace/projects/montreal/src/montreal/defs/assets/templates/: map.html  report.html
dagster-workspace/projects/montreal/src/montreal/defs/checks/: factory.py
dagster-workspace/projects/montreal/src/montreal/defs/resources/: duckdb.py  lakehouse.py  state.py
dagster-workspace/projects/montreal/src/montreal/defs/resources/lakehouse/: __init__.py  frames.py  paths.py  skip.py  store.py
dagster-workspace/projects/montreal/tests/: preview.py  test_assets.py  test_batch.py  test_bronze.py  test_cache_gate.py  test_cache_gate_partitioned.py  test_check_reuse.py  test_checks.py  test_gold.py  test_lakehouse.py  test_pois.py  test_provenance_probe.py  test_provenance_probe_partitioned.py  test_silver.py
dagster-workspace/projects/texas/: pyproject.toml
dagster-workspace/projects/texas/.dg/: telemetry.yaml
dagster-workspace/projects/texas/src/texas/defs/: assets.py  resources.py
