[project]
name = "dagster_workspace_aws"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.13.5",
    "dagster-dg-cli",
    "dagster-webserver",
    "aws-cdk-lib>=2.160.0",
    "cdk-ecr-deployment>=3.0.0",
    "constructs>=10.0.0,<11.0.0",
    "boto3>=1.34.0",
]

[tool.dg]
directory_type = "deployment"


