[project]
name = "montreal"
requires-python = ">=3.10,<3.15"
version = "0.2.1"
dependencies = [
    "dagster==1.13.5",
    "dagster-aws>=0.29.5",
    "duckdb>=1.5.2",
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "h3>=4.4.2",
    "h3pandas>=0.3.0",
    "jinja2>=3.1.0",
    "matplotlib>=3.9.0",
    "pyarrow>=24.0.0",
    "s3fs>=2026.4.0",
    "sqlescapy>=1.0.1",
    "universal-pathlib>=0.3.10",
]

[dependency-groups]
dev = [
    "dagster-dg-cli",
    "dagster-webserver",
    "pytest>=9.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "montreal"
registry_modules = [
    "montreal.components.*",
]


