[project]
name = "texas"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.13.5",
    "dagster-aws>=0.29.5",
    "geopandas>=1.1.3",
    "dagster-cloud",
    "pyarrow>=24.0.0",
    "plotly>=6.7.0",
]

[dependency-groups]
dev = [
    "dagster-dg-cli",
    "dagster-webserver",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "texas"
registry_modules = [
    "texas.components.*",
]


